<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SignUpActivity">]

    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/layoutMain"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/action_sign_up"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView5"
                    style="@style/AppInputLabel"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_name" />

                <EditText
                    android:id="@+id/editTextTextName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:ems="10"
                    android:imeActionLabel="Name"
                    android:inputType="text"
                    android:labelFor="@id/textView5"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView6"
                    style="@style/AppInputLabel"
                    android:layout_width="145dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_email" />

                <EditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView7"
                    style="@style/AppInputLabel"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_password" />

                <EditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView8"
                    style="@style/AppInputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_password_confirm" />

                <EditText
                    android:id="@+id/editTextTextPasswordConfirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="textPassword"
                    android:minHeight="48dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView3"
                    style="@style/AppInputLabel"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prompt_gender" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:id="@+id/genderRadioGroup"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/radioButton"
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_a" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="98dp"
                        android:layout_height="wrap_content"
                        android:text="@string/gender_b" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView4"
                    style="@style/AppInputLabel"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_sports" />

                <CheckBox
                    android:id="@+id/checkBoxSportsA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sport_a" />

                <CheckBox
                    android:id="@+id/checkBoxSportsB"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sport_b" />

                <CheckBox
                    android:id="@+id/checkBoxSportsC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/sport_c" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView9"
                    style="@style/AppInputLabel"
                    android:layout_width="134dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_dob" />

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView10"
                    style="@style/AppInputLabel"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_city" />

                <EditText
                    android:id="@+id/editTextTextCity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView11"
                    style="@style/AppInputLabel"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_country" />

                <EditText
                    android:id="@+id/editTextTextCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:inputType="text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <TextView
                    android:id="@+id/textView12"
                    style="@style/AppInputLabel"
                    android:layout_width="293dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_skills" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:layout_weight="1"
                    android:id="@+id/skillRadioGroup"
                    android:orientation="horizontal">


                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skill_a" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/skill_b" />
                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:paddingStart="20dp"
                android:paddingEnd="20dp"
                android:paddingBottom="20dp">

                <CheckBox
                    android:id="@+id/checkBoxTC"
                    style="@style/AppInputLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/prompt_tc" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonSubmit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:onClick="verifyDetails"
                    android:text="Submit" />

                <Button
                    android:id="@+id/buttonClear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:onClick="clearAll"
                    android:text="Clear" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>